--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ out/
 
 ### VS Code ###
 .vscode/
+
+application.properties
+application-local.properties
+application-dev.properties
+application-prod.properties
+# Keep the template
+!application.properties.example
